libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/generics.jsonc
//@ run: fail
//@ description: If any generics are used in the path, error out
["::kernel::special_form<Integer>::if<String>"]
//~^ ERROR generic argument not allowed here
